Fixed a bunch of things with weird "wrap" divs, CSS improvements and more.

--- a/frontend/src/Styling/Global.css
+++ b/frontend/src/Styling/Global.css
@@ -4,7 +4,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/* body, html, div#app {
-    width: 100vw;
-    height: 100vh;
-} */
+body, html, div#app {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
