--- a/frontend/src/Styling/MenuBarStyling.css
+++ b/frontend/src/Styling/MenuBarStyling.css
@@ -3,7 +3,7 @@ nav.nav-menubar {
     margin: 0;
     padding: 0;
     background: #4c6ca0;
-    overflow: auto;
+    /* overflow: auto; */
     position: fixed;
     z-index: 9999;
     width: 100%;
