--- a/frontend/src/Styling/WelcomePageStyling.css
+++ b/frontend/src/Styling/WelcomePageStyling.css
@@ -3,43 +3,30 @@
 }
 
 div#welcome-wrap {
-  width: 100vw;
-  height: 100vh;
-}
-
-div#data-view {
-  width:100%;
-  height: 100%;
-  overflow: hidden;
+  width: 100%;
+  height: 90vh;
+  top: 10vh;
+  position:relative;
 }
 
 div#chart {
   position: absolute;
   width: 15vw;
   height: 80vh;
-  top: 15vh;
+  top: 1vh;
   float: left;
 }
 
-table#current {
-  position: relative;
+div#data-view {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  /* font-size: 2.5vw; */
+  padding-left: 4vw;
 }
 
 td#heading {
   font-weight: bolder;
-}
-
-header {
-  background-color: #222;
-  padding: 15px;
 }
 
 th, td {
@@ -51,4 +38,8 @@ th, td {
   -moz-transform: scale(1, 2); 
   -ms-transform: scale(1, 2); 
   -o-transform: scale(1, 2); Opera */
+}
+
+h1#WelcomeHeading {
+  font-size: 5vw;
 }
